--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.github.sujithkanna:smileyrating:1.6.8'
 
 }
