--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.ReferEarnActivity"></activity>
+        <activity android:name=".Activities.FeedbackActivity"></activity>
+        <activity android:name=".Activities.ReferEarnActivity" />
         <activity android:name=".Activities.MyProfileActivity" />
         <activity android:name=".Activities.PaymentActivity" />
         <activity android:name=".Activities.ContactUsActivity" />
